Geany 1.23 (unreleased)

    Editor
    * Update Scintilla to version 3.2.1 (#3540469).


Geany 1.22 (June 18, 2012)

    General
    * Bump dependencies to GTK >= 2.16 and GLib >= 2.20.
    * Switch to Glade 3 and dynamically loaded XML UI description.
    * Rewrite theming support for better flexibility.
    * Add support for opening files read-only from the command line.
    * Always load the default session if configured to do so.
    * Make all filetypes use named styles to simplify color scheme
      authoring.
    * Make 'Replace Spaces by Tabs' only match leading spaces to
      preserve alignment.

    Possibly incompatible changes
    * Theming and filetype style changes mean old filetypes and color
      schemes are not compatible with this version of Geany.
    * There are some default keybinding changes but these will only
      apply to newly created configurations.
    * Changes to the "project-dialog*" signals may affect plugins.

    Bug fixes
    * Fix escaping of session file paths (#3425969).
    * Fix closing when minimized under Windows (#3421282).
    * Properly handle remote URIs received through drag 'n drop
      (#2966770, #3479567).
    * Fix build with bleeding-edge GLib (#3483388).
    * Fix color scheme selection in Ubuntu Unity (#3479674).
    * Fix very slow regex tag parsing on Windows (e.g. for HTML).
    * Fix detecting a changed file on disk when opening from
      the command-line (Windows).
    * Fix quick search entry behavior on Windows.
    * Fix keybindings conflicts check when swapping a binding.
    * Fix comments insertion in some cases (#3449635, #3534320).
    * Add missing Windows mio makefile.

    Prefs
    * Split "always wrap search and hide find dialog" pref into
      "always wrap search" and "hide find dialog" (Dimitar Zhekov).
    * Add Project Properties overrides for 'Saving files' prefs.
    * Add hidden VTE preference "send_cmd_prefix" to prefix commands sent