@@ -3,6 +3,9 @@ Geany 1.23 (unreleased)
     Editor
     * Update Scintilla to version 3.2.1 (#3540469).
 
+    Search
+    * 'Mark All' now also uses the fully-featured PCRE engine (#3564132).
+
 
 Geany 1.22 (June 18, 2012)
 
